changed variable names

--- a/templates/FFMassiveV_form_factors.cpp.in
+++ b/templates/FFMassiveV_form_factors.cpp.in
@@ -227,8 +227,8 @@ std::valarray<std::complex<double>> FFVEmitterFi<Fj, Fi, V, F, S>::value(
       EvaluationContext& context) {
 
    using VertexFiBarFiVBar = Vertex<typename Fi::lorentz_conjugate, Fi, typename V::lorentz_conjugate>;
-   using VertexFBarFjS     = Vertex<typename F::lorentz_conjugate, Fj, typename S::lorentz_conjugate>;
-   using VertexFiBarFSBar  = Vertex<typename Fi::lorentz_conjugate, F, S>;
+   using VertexFBarFjSBar     = Vertex<typename F::lorentz_conjugate, Fj, typename S::lorentz_conjugate>;
+   using VertexFiBarFS  = Vertex<typename Fi::lorentz_conjugate, F, S>;
 
    // masses of external fermions
    const auto mj = context.mass<Fj>(indices_in);
@@ -238,23 +238,23 @@ std::valarray<std::complex<double>> FFVEmitterFi<Fj, Fi, V, F, S>::value(
 
    std::valarray<std::complex<double>> res {0.0, 0.0};
    // loop over all possible particle "generations" attached to both vertices
-   for (const auto& indexIn: index_range<VertexFBarFjS>()) {
-      for (const auto& indexOut: index_range<VertexFiBarFSBar>()) {
+   for (const auto& indexIn: index_range<VertexFBarFjSBar>()) {
+      for (const auto& indexOut: index_range<VertexFiBarFS>()) {
          // cycle if generations of external fermions  are different then requested   
-         const auto jFieldIndices = VertexFBarFjS::template field_indices<1>(indexIn);
-         const auto iFieldIndices = VertexFiBarFSBar::template field_indices<0>(indexOut);
+         const auto jFieldIndices = VertexFBarFjSBar::template field_indices<1>(indexIn);
+         const auto iFieldIndices = VertexFiBarFS::template field_indices<0>(indexOut);
          if (jFieldIndices != indices_in || iFieldIndices != indices_out)
             continue;
 
          // match indices of the scalar field in the loop
-         const auto scalarFieldIndicesIn = VertexFBarFjS::template field_indices<2>(indexIn);
-         const auto scalarFieldIndicesOut = VertexFiBarFSBar::template field_indices<2>(indexOut);
+         const auto scalarFieldIndicesIn = VertexFBarFjSBar::template field_indices<2>(indexIn);
+         const auto scalarFieldIndicesOut = VertexFiBarFS::template field_indices<2>(indexOut);
          if (scalarFieldIndicesIn != scalarFieldIndicesOut)
             continue;
 
          // match indices of the fermion field in the loop
-         const auto fermionFieldIndicesIn = VertexFBarFjS::template field_indices<0>(indexIn);
-         const auto fermionFieldIndicesOut = VertexFiBarFSBar::template field_indices<1>(indexOut);
+         const auto fermionFieldIndicesIn = VertexFBarFjSBar::template field_indices<0>(indexIn);
+         const auto fermionFieldIndicesOut = VertexFiBarFS::template field_indices<1>(indexOut);
          if (fermionFieldIndicesIn != fermionFieldIndicesOut)
             continue;
 
@@ -272,11 +272,11 @@ std::valarray<std::complex<double>> FFVEmitterFi<Fj, Fi, V, F, S>::value(
          const auto mS = context.mass<S>(scalarFieldIndicesIn);
          const auto mS2 = mS*mS;
 
-         const auto FBarFjSBar = VertexFBarFjS::evaluate(indexIn, context);
+         const auto FBarFjSBar = VertexFBarFjSBar::evaluate(indexIn, context);
          const auto FBarFjSBarL = FBarFjSBar.left();
          const auto FBarFjSBarR = FBarFjSBar.right();
 
-         const auto FiBarFSBar = VertexFiBarFSBar::evaluate(indexOut, context);
+         const auto FiBarFSBar = VertexFiBarFS::evaluate(indexOut, context);
          const auto FiBarFSL = FiBarFSBar.left();
          const auto FiBarFSR = FiBarFSBar.right();
          
@@ -304,8 +304,8 @@ std::valarray<std::complex<double>> FFVEmitterF<Fj, Fi, V, F, S>::value(
       EvaluationContext& context) {
 
    using VertexFBarFVBar  = Vertex<typename F::lorentz_conjugate, F, typename V::lorentz_conjugate>;
-   using VertexFBarFjS    = Vertex<typename F::lorentz_conjugate, Fj, typename S::lorentz_conjugate>;
-   using VertexFiBarFSBar = Vertex<typename Fi::lorentz_conjugate, F, S>;
+   using VertexFBarFjSBar    = Vertex<typename F::lorentz_conjugate, Fj, typename S::lorentz_conjugate>;
+   using VertexFiBarFS = Vertex<typename Fi::lorentz_conjugate, F, S>;
 
    // masses of external fermions
    const auto mj = context.mass<Fj>(indices_in);
@@ -317,24 +317,24 @@ std::valarray<std::complex<double>> FFVEmitterF<Fj, Fi, V, F, S>::value(
 
    std::valarray<std::complex<double>> res {0.0, 0.0};
    // loop over all possible particle "generations" attached to both vertices
-   for (const auto& indexIn: index_range<VertexFBarFjS>()) {
-      for (const auto& indexOut: index_range<VertexFiBarFSBar>()) {
+   for (const auto& indexIn: index_range<VertexFBarFjSBar>()) {
+      for (const auto& indexOut: index_range<VertexFiBarFS>()) {
 
          // cycle if generations of external fermions  are different then requested   
-         const auto jFieldIndices = VertexFBarFjS::template field_indices<1>(indexIn);
-         const auto iFieldIndices = VertexFiBarFSBar::template field_indices<0>(indexOut);
+         const auto jFieldIndices = VertexFBarFjSBar::template field_indices<1>(indexIn);
+         const auto iFieldIndices = VertexFiBarFS::template field_indices<0>(indexOut);
          if (jFieldIndices != indices_in || iFieldIndices != indices_out)
             continue;
 
          // match indices of the scalar field in the loop
-         const auto scalarFieldIndicesIn = VertexFBarFjS::template field_indices<2>(indexIn);
-         const auto scalarFieldIndicesOut = VertexFiBarFSBar::template field_indices<2>(indexOut);
+         const auto scalarFieldIndicesIn = VertexFBarFjSBar::template field_indices<2>(indexIn);
+         const auto scalarFieldIndicesOut = VertexFiBarFS::template field_indices<2>(indexOut);
          if (scalarFieldIndicesIn != scalarFieldIndicesOut)
             continue;
 
          // get FBarFVBar vertex
-         const auto fermionFieldIndicesIn = VertexFBarFjS::template field_indices<0>(indexIn);
-         const auto fermionFieldIndicesOut = VertexFiBarFSBar::template field_indices<1>(indexOut);
+         const auto fermionFieldIndicesIn = VertexFBarFjSBar::template field_indices<0>(indexIn);
+         const auto fermionFieldIndicesOut = VertexFiBarFS::template field_indices<1>(indexOut);
          const auto indexFBarFVBar = concatenate(
             fermionFieldIndicesOut, fermionFieldIndicesIn,
             spectator_indices
@@ -350,11 +350,11 @@ std::valarray<std::complex<double>> FFVEmitterF<Fj, Fi, V, F, S>::value(
          const auto mS = context.mass<S>(scalarFieldIndicesIn);
          const auto mS2 = mS*mS;
 
-         const auto FBarFjSBar = VertexFBarFjS::evaluate(indexIn, context);
+         const auto FBarFjSBar = VertexFBarFjSBar::evaluate(indexIn, context);
          const auto FBarFjSBarL = FBarFjSBar.left();
          const auto FBarFjSBarR = FBarFjSBar.right();
 
-         const auto FiBarFSBar = VertexFiBarFSBar::evaluate(indexOut, context);
+         const auto FiBarFSBar = VertexFiBarFS::evaluate(indexOut, context);
          const auto FiBarFSL = FiBarFSBar.left();
          const auto FiBarFSR = FiBarFSBar.right();
 
