revert OnlyLowEnergyFlexibleSUSY = False

--- a/model_files/MRSSM2/FlexibleSUSY.m.in
+++ b/model_files/MRSSM2/FlexibleSUSY.m.in
@@ -2,7 +2,7 @@ FSModelName = "MRSSM2";
 FSEigenstates = SARAH`EWSB;
 FSDefaultSARAHModel = MRSSM;
 
-OnlyLowEnergyFlexibleSUSY = False;
+OnlyLowEnergyFlexibleSUSY = True;
 
 MINPAR = {
     {3, TanBeta}
