--- a/doc/mainpage.dox.in
+++ b/doc/mainpage.dox.in
@@ -2,120 +2,20 @@
 \mainpage FlexibleSUSY @FLEXIBLESUSY_VERSION@
 \tableofcontents
 
-<a href="https://flexiblesusy.hepforge.org/">FlexibleSUSY</a> provides
-Mathematica and C++ code to create fast and modular spectrum
-generators for supersymmetric and non-supersymmetric models. It is
-based on <a href="http://sarah.hepforge.org/">SARAH</a> and uses
-components from <a href="http://softsusy.hepforge.org/">SOFTSUSY</a>.
-
-\section quick_start Quick start
-
-If SARAH is not installed, please run
-
-    ./install-sarah
-
-To create a spectrum generator for the NMSSM, execute the following
-commands:
-
-    ./createmodel --name=NMSSM
-    ./configure --with-models=NMSSM
-    make
-
-To run the NMSSM spectrum generator with an SLHA input file, run in
-the shell
-
-    ./models/NMSSM/run_NMSSM.x --slha-input-file=model_files/NMSSM/LesHouches.in.NMSSM
-
-Alternatively, the Mathematica interface of FlexibleSUSY may be used:
-
-    math -run "<< \"models/NMSSM/run_NMSSM.m\""
-
-\section further_reading Documentation
-
-\subsection Documentation_ModelFiles Creating FlexibleSUSY models
+\section Documentation_ModelFiles Creating a FlexibleSUSY model
 
 - @ref model_file_options
 - @ref FlexibleEFTHiggs
 - @ref slha_input_fields
 
-\subsection Documentation_Models FlexibleSUSY models
+\section Documentation_Models Available FlexibleSUSY models
 
 - @ref hssusy
 - @ref mssmefthiggs
 - @ref nuhmssmnofvhimalaya
 
-\subsection Documentation_Extensions Extensions
+\section Documentation_Extensions Extensions
 
 - @ref librarylink
-
-\section References
-
- - Peter Athron, Jae-hyeon Park, Dominik Stöckinger, Alexander Voigt:
-   "FlexibleSUSY — A spectrum generator generator for supersymmetric
-   models" [<a href="https://arxiv.org/abs/1406.2319">CPC 190 (2015)
-   139-172</a>]
-
- - Peter Athron, Jae-hyeon Park, Tom Steudtner, Dominik Stöckinger,
-   Alexander Voigt: "Precise Higgs mass calculations in (non-)minimal
-   supersymmetry at both high and low scales" [<a
-   href="https://arxiv.org/abs/1609.00371">JHEP 1701 (2017) 079</a>]
-
- - Peter Athron, Markus Bach, Dylan Harries, Thomas Kwasnitza,
-   Jae-hyeon Park, Dominik Stöckinger, Alexander Voigt, Jobst Ziebell:
-   "FlexibleSUSY 2.0: Extensions to investigate the phenomenology of
-   SUSY and non-SUSY models" [<a
-   href="https://arxiv.org/abs/1710.03760">CPC 230 (2018) 145-217</a>]
-
-If you use **FlexibleSUSY** in your work please cite [<a
-href="https://inspirehep.net/record/1299998">CPC 190 (2015)
-139-172</a>, <a href="https://inspirehep.net/record/1629978">CPC 230
-(2018) 145-217</a>].
-
-If you use the **FlexibleEFTHiggs** approach in your work please cite [<a
-href="https://inspirehep.net/record/1484857">JHEP 1701 (2017)
-079</a>].
-
-If you use **FlexibleSUSY+Himalaya** or <a
-href="https://github.com/jklappert/Himalaya">Himalaya</a> in your
-work, please cite [<a
-href="https://arxiv.org/abs/1708.05720">1708.05720</a>, <a
-href="https://arxiv.org/abs/1005.5709">1005.5709</a>, <a
-href="https://arxiv.org/abs/1807.03509">1807.03509</a>]
-
-FlexibleSUSY depends on <a href="http://sarah.hepforge.org/">SARAH</a>
-and contains components from <a
-href="http://softsusy.hepforge.org/">SOFTSUSY</a>. Therefore, please
-also cite the following publications along with FlexibleSUSY:
-
- - **SARAH**
-   [<a href="http://arxiv.org/abs/0909.2863">CPC 181 (2010) 1077-1086</a>,
-    <a href="http://arxiv.org/abs/1002.0840">CPC 182 (2011) 808-833</a>,
-    <a href="http://arxiv.org/abs/1207.0906">CPC 184 (2013) 1792-1809</a>,
-    <a href="http://arxiv.org/abs/1309.7223">CPC 185 (2014) 1773-1790</a>]
-
- -  **SOFTSUSY**
-    [<a href="http://arxiv.org/abs/hep-ph/0104145">CPC 143 (2002) 305-331</a>,
-     <a href="http://arxiv.org/abs/1311.7659">CPC 185 (2014) 2322</a>]
-
-\section Authors
-
-FlexibleSUSY has been written by
-
-- Peter Athron
-- Markus Bach
-- Dylan Harries
-- Wojciech Kotlarski
-- Thomas Kwasnitza
-- Jae-hyeon Park
-- Dominik Stöckinger
-- Alexander Voigt
-- Jobst Ziebell
-
-\section fs_resources Resources
-
- - Homepage:                https://flexiblesusy.hepforge.org
- - Mailing list:            flexiblesusy@projects.hepforge.org
- - Source code repository:  https://github.com/FlexibleSUSY
- - Bug reports:             https://github.com/FlexibleSUSY/FlexibleSUSY/issues
 
 */
