Print the values of ENABLE_FEYNARTS and ENABLE_FORMCALC when running `make showbuild`

--- a/config/Makefile.in
+++ b/config/Makefile.in
@@ -302,6 +302,8 @@ showbuild:
 	@echo "ENABLE_LAPACK      = $(ENABLE_LAPACK)"
 	@echo "ENABLE_LIBRARYLINK = $(ENABLE_LIBRARYLINK)"
 	@echo "ENABLE_ILP64MKL_WORKAROUND = $(ENABLE_ILP64MKL_WORKAROUND)"
+	@echo "ENABLE_FEYNARTS   = $(ENABLE_FEYNARTS)"
+	@echo "ENABLE_FORMCALC   = $(ENABLE_FORMCALC)"
 	@echo "ENABLE_LOOPTOOLS   = $(ENABLE_LOOPTOOLS)"
 	@echo "ENABLE_META        = $(ENABLE_META)"
 	@echo "ENABLE_SHARED_LIBS = $(ENABLE_SHARED_LIBS)"
