--- a/templates/FFMassiveV_form_factors.cpp.in
+++ b/templates/FFMassiveV_form_factors.cpp.in
@@ -148,8 +148,8 @@ std::valarray<std::complex<double>> FFVEmitterFj<Fj, Fi, V, F, S>::value(
       EvaluationContext& context) {
 
    using VertexFjBarFjVBar = Vertex<typename Fj::lorentz_conjugate, Fj, typename V::lorentz_conjugate>;
-   using VertexFbarFjS     = Vertex<typename F::lorentz_conjugate, Fj, typename S::lorentz_conjugate>;
-   using VertexFibarFSbar  = Vertex<typename Fi::lorentz_conjugate, F, S>;
+   using VertexFbarFjSBar  = Vertex<typename F::lorentz_conjugate, Fj, typename S::lorentz_conjugate>;
+   using VertexFibarFS     = Vertex<typename Fi::lorentz_conjugate, F, S>;
 
    // masses of external fermions
    const auto mj = context.mass<Fj>(indices_in);
@@ -159,24 +159,24 @@ std::valarray<std::complex<double>> FFVEmitterFj<Fj, Fi, V, F, S>::value(
 
    std::valarray<std::complex<double>> res {0.0, 0.0};
    // loop over all possible particle "generations" attached to both vertices
-   for (const auto& indexIn: index_range<VertexFbarFjS>()) {
-      for (const auto& indexOut: index_range<VertexFibarFSbar>()) {
+   for (const auto& indexIn: index_range<VertexFbarFjSBar>()) {
+      for (const auto& indexOut: index_range<VertexFibarFS>()) {
 
          // cycle if generations of external fermions  are different then requested   
-         const auto jFieldIndices = VertexFbarFjS::template field_indices<1>(indexIn);
-         const auto iFieldIndices = VertexFibarFSbar::template field_indices<0>(indexOut);
+         const auto jFieldIndices = VertexFbarFjSBar::template field_indices<1>(indexIn);
+         const auto iFieldIndices = VertexFibarFS::template field_indices<0>(indexOut);
          if (jFieldIndices != indices_in || iFieldIndices != indices_out)
             continue;
 
          // match indices of the scalar field in the loop
-         const auto scalarFieldIndicesIn = VertexFbarFjS::template field_indices<2>(indexIn);
-         const auto scalarFieldIndicesOut = VertexFibarFSbar::template field_indices<2>(indexOut);
+         const auto scalarFieldIndicesIn = VertexFbarFjSBar::template field_indices<2>(indexIn);
+         const auto scalarFieldIndicesOut = VertexFibarFS::template field_indices<2>(indexOut);
          if (scalarFieldIndicesIn != scalarFieldIndicesOut)
             continue;
 
          // match indices of the fermion field in the loop
-         const auto fermionFieldIndicesIn = VertexFbarFjS::template field_indices<0>(indexIn);
-         const auto fermionFieldIndicesOut = VertexFibarFSbar::template field_indices<1>(indexOut);
+         const auto fermionFieldIndicesIn = VertexFbarFjSBar::template field_indices<0>(indexIn);
+         const auto fermionFieldIndicesOut = VertexFibarFS::template field_indices<1>(indexOut);
          if (fermionFieldIndicesIn != fermionFieldIndicesOut)
             continue;
 
@@ -194,13 +194,13 @@ std::valarray<std::complex<double>> FFVEmitterFj<Fj, Fi, V, F, S>::value(
          const auto mS = context.mass<S>(scalarFieldIndicesIn);
          const auto mS2 = mS*mS;
 
-         const auto FBarFjSBar = VertexFbarFjS::evaluate(indexIn, context);
+         const auto FBarFjSBar = VertexFbarFjSBar::evaluate(indexIn, context);
          const auto FBarFjSBarL = FBarFjSBar.left();
          const auto FBarFjSBarR = FBarFjSBar.right();
 
-         const auto FiBarFSBar = VertexFibarFSbar::evaluate(indexOut, context);
-         const auto FiBarFSL = FiBarFSBar.left();
-         const auto FiBarFSR = FiBarFSBar.right();
+         const auto FiBarFS = VertexFibarFS::evaluate(indexOut, context);
+         const auto FiBarFSL = FiBarFS.left();
+         const auto FiBarFSR = FiBarFS.right();
          
          const std::complex<double> A1L = 
          (FjBarFjVBarL*(FBarFjSBarL*FiBarFSR*A0i(aa0,mF2) - FBarFjSBarL*FiBarFSR*A0i(aa0,mS2) - 
@@ -276,9 +276,9 @@ std::valarray<std::complex<double>> FFVEmitterFi<Fj, Fi, V, F, S>::value(
          const auto FBarFjSBarL = FBarFjSBar.left();
          const auto FBarFjSBarR = FBarFjSBar.right();
 
-         const auto FiBarFSBar = VertexFiBarFS::evaluate(indexOut, context);
-         const auto FiBarFSL = FiBarFSBar.left();
-         const auto FiBarFSR = FiBarFSBar.right();
+         const auto FiBarFS  = VertexFiBarFS::evaluate(indexOut, context);
+         const auto FiBarFSL = FiBarFS.left();
+         const auto FiBarFSR = FiBarFS.right();
          
          const std::complex<double> A1L = 
          (FiBarFiVBarL*(-(FBarFjSBarL*FiBarFSR*A0i(aa0,mF2)) + FBarFjSBarL*FiBarFSR*A0i(aa0,mS2) + 
@@ -350,13 +350,13 @@ std::valarray<std::complex<double>> FFVEmitterF<Fj, Fi, V, F, S>::value(
          const auto mS = context.mass<S>(scalarFieldIndicesIn);
          const auto mS2 = mS*mS;
 
-         const auto FBarFjSBar = VertexFBarFjSBar::evaluate(indexIn, context);
+         const auto FBarFjSBar  = VertexFBarFjSBar::evaluate(indexIn, context);
          const auto FBarFjSBarL = FBarFjSBar.left();
          const auto FBarFjSBarR = FBarFjSBar.right();
 
-         const auto FiBarFSBar = VertexFiBarFS::evaluate(indexOut, context);
-         const auto FiBarFSL = FiBarFSBar.left();
-         const auto FiBarFSR = FiBarFSBar.right();
+         const auto FiBarFS  = VertexFiBarFS::evaluate(indexOut, context);
+         const auto FiBarFSL = FiBarFS.left();
+         const auto FiBarFSR = FiBarFS.right();
 
          const std::complex<double> A1L = 
          -(-(FBarFjSBarL*FBarFVBarR*FiBarFSR*B0i(bb0,0,mFA2,mFB2)) + (FBarFVBarL*(FiBarFSR*mFA + FiBarFSL*mi)*(FBarFjSBarL*mFB + FBarFjSBarR*mj) - 
@@ -394,8 +394,8 @@ std::valarray<std::complex<double>> FFVEmitterS<Fj, Fi, V, F, S>::value(
    EvaluationContext& context) {
 
    using VertexSBarSVBar  = Vertex<typename S::lorentz_conjugate, S, typename V::lorentz_conjugate>;
-   using VertexFBarFjS    = Vertex<typename F::lorentz_conjugate, Fj, typename S::lorentz_conjugate>;
-   using VertexFiBarFSBar = Vertex<typename Fi::lorentz_conjugate, F, S>;
+   using VertexFBarFjSBar    = Vertex<typename F::lorentz_conjugate, Fj, typename S::lorentz_conjugate>;
+   using VertexFiBarFS = Vertex<typename Fi::lorentz_conjugate, F, S>;
 
    auto spectator_indices = default_indices_for_spectator<V>();
 
@@ -407,24 +407,24 @@ std::valarray<std::complex<double>> FFVEmitterS<Fj, Fi, V, F, S>::value(
 
    std::valarray<std::complex<double>> res {0.0, 0.0};
    // loop over all possible particle "generations" attached to both vertices
-   for (const auto& indexIn: index_range<VertexFBarFjS>()) {
-      for (const auto& indexOut: index_range<VertexFiBarFSBar>()) {
+   for (const auto& indexIn: index_range<VertexFBarFjSBar>()) {
+      for (const auto& indexOut: index_range<VertexFiBarFS>()) {
 
          // cycle if generations of external fermions  are different then requested   
-         const auto jFieldIndices = VertexFBarFjS::template field_indices<1>(indexIn);
-         const auto iFieldIndices = VertexFiBarFSBar::template field_indices<0>(indexOut);
+         const auto jFieldIndices = VertexFBarFjSBar::template field_indices<1>(indexIn);
+         const auto iFieldIndices = VertexFiBarFS::template field_indices<0>(indexOut);
          if (jFieldIndices != indices_in || iFieldIndices != indices_out)
             continue;
 
          // match indices of the fermion field in the loop
-         const auto fermionFieldIndicesIn = VertexFBarFjS::template field_indices<0>(indexIn);
-         const auto fermionFieldIndicesOut = VertexFiBarFSBar::template field_indices<1>(indexOut);
+         const auto fermionFieldIndicesIn = VertexFBarFjSBar::template field_indices<0>(indexIn);
+         const auto fermionFieldIndicesOut = VertexFiBarFS::template field_indices<1>(indexOut);
          if (fermionFieldIndicesIn != fermionFieldIndicesOut)
             continue;
 
          // get SBarSVBar vertex 
-         const auto scalarFieldIndicesIn = VertexFBarFjS::template field_indices<2>(indexIn);
-         const auto scalarFieldIndicesOut = VertexFiBarFSBar::template field_indices<2>(indexOut);
+         const auto scalarFieldIndicesIn = VertexFBarFjSBar::template field_indices<2>(indexIn);
+         const auto scalarFieldIndicesOut = VertexFiBarFS::template field_indices<2>(indexOut);
          const auto indexSBarSVBar = concatenate(
             scalarFieldIndicesOut, scalarFieldIndicesIn, 
             spectator_indices
@@ -440,13 +440,13 @@ std::valarray<std::complex<double>> FFVEmitterS<Fj, Fi, V, F, S>::value(
          const auto mSA = context.mass<S>(scalarFieldIndicesOut);
          const auto mSA2 = mSA * mSA;
 
-         const auto FBarFjSBar = VertexFBarFjS::evaluate(indexIn, context);
+         const auto FBarFjSBar  = VertexFBarFjSBar::evaluate(indexIn, context);
          const auto FBarFjSBarL = FBarFjSBar.left();
          const auto FBarFjSBarR = FBarFjSBar.right();
 
-         const auto FiBarFSBar = VertexFiBarFSBar::evaluate(indexOut, context);
-         const auto FiBarFSL = FiBarFSBar.left();
-         const auto FiBarFSR = FiBarFSBar.right();
+         const auto FiBarFS  = VertexFiBarFS::evaluate(indexOut, context);
+         const auto FiBarFSL = FiBarFS.left();
+         const auto FiBarFSR = FiBarFS.right();
 
          const std::complex<double> A1L = 
          (SBarSVBar*(2*FBarFjSBarL*FiBarFSR*C0i(cc00,0,mi2,mj2,mSB2,mSA2,mF2) + FBarFjSBarL*FiBarFSR*(-mi2 + mj2)*C0i(cc12,0,mi2,mj2,mSB2,mSA2,mF2) + 
