Remove colour indices from cxx representation of fields. Implement routines for vertex handling including detection of colour structures. Provide a stub interface to the colour factor calculation.

--- a/test/test_SM_npointfunctions.cpp.in
+++ b/test/test_SM_npointfunctions.cpp.in
@@ -108,9 +108,10 @@ namespace flexiblesusy
 {
 namespace SM_cxx_diagrams
 {
-@CXXDiagrams_VertexData@
-
+namespace detail
+{
 @CXXDiagrams_Vertices@
+}
 
 namespace npointfunctions
 {
