--- a/templates/cxx_qft/vertices.hpp.in
+++ b/templates/cxx_qft/vertices.hpp.in
@@ -62,168 +62,167 @@ namespace flexiblesusy
 {
 namespace @ModelName@_cxx_diagrams
 {
-   class ScalarVertex
-   {
-   private:
-      std::complex<double> val;
+class ScalarVertex
+{
+private:
+	std::complex<double> val;
+public:
+	ScalarVertex(std::complex<double> v) : val(v) {}
 
-   public:
-      ScalarVertex(std::complex<double> v) : val(v) {}
+	std::complex<double> value() const { return val; }
 
-      std::complex<double> value() const { return val; }
+	bool isZero() const
+	{
+		return (is_zero(val.real()) && is_zero(val.imag()));
+	}
+};
 
-      bool isZero() const
-      {
-         return (is_zero(val.real()) && is_zero(val.imag()));
-      }
-   };
+class ChiralVertex
+{
+private:
+	std::pair<std::complex<double>, std::complex<double>> value;
+public:
+	ChiralVertex( const std::complex<double>& left,
+		const std::complex<double>& right)
+	: value(left, right) {}
 
-   class ChiralVertex
-   {
-   private:
-      std::pair<std::complex<double>, std::complex<double>> value;
+	std::complex<double> left() const { return value.first; }
+	std::complex<double> right() const { return value.second; }
 
-   public:
-      ChiralVertex(const std::complex<double>& left,
-                   const std::complex<double>& right)
-         : value(left, right)
-      {
-      }
+	bool isZero() const
+	{
+		return (is_zero(value.first.real()) && is_zero(value.first.imag()) &&
+			is_zero(value.second.real()) && is_zero(value.second.imag()));
+	}
+};
 
-      std::complex<double> left() const { return value.first; }
+class MomentumDifferenceVertex
+{
+private:
+	std::complex<double> val;
+	int minuendIndex;
+	int subtrahendIndex;
+public:
+	MomentumDifferenceVertex( std::complex<double> v, int mi, int si )
+  : val(v), minuendIndex(mi), subtrahendIndex(si) {}
 
-      std::complex<double> right() const { return value.second; }
+	std::complex<double> value(int mi, int si) const
+	{
+		if (mi == minuendIndex && si == subtrahendIndex)
+			return val;
+		if (mi == subtrahendIndex && si == minuendIndex)
+			return -val;
 
-      bool isZero() const
-      {
-         return (is_zero(value.first.real()) && is_zero(value.first.imag()) &&
-                 is_zero(value.second.real()) && is_zero(value.second.imag()));
-      }
-   };
+		throw std::invalid_argument(
+			"MomentumDifferenceVertex: Wrong index combination" );
+    return 0.0;
+	}
 
-   class MomentumDifferenceVertex
-   {
-   private:
-      std::complex<double> val;
-      int minuendIndex;
-      int subtrahendIndex;
+	bool isZero() const
+	{
+		return (is_zero(val.real()) && is_zero(val.imag()));
+	}
+};
 
-   public:
-      MomentumDifferenceVertex(std::complex<double> v, int mi, int si)
-         : val(v), minuendIndex(mi), subtrahendIndex(si)
-      {
-      }
+class InverseMetricVertex
+{
+private:
+	std::complex<double> val;
+public:
+	InverseMetricVertex(std::complex<double> v) : val(v) {}
 
-      std::complex<double> value(int mi, int si) const
-      {
-         if (mi == minuendIndex && si == subtrahendIndex)
-            return val;
-         if (mi == subtrahendIndex && si == minuendIndex)
-            return -val;
+	std::complex<double> value() const { return val; }
 
-         throw std::invalid_argument(
-            "MomentumDifferenceVertex: Wrong index combination");
-         return 0.0;
-      }
+	bool isZero() const
+	{
+		return (is_zero(val.real()) && is_zero(val.imag()));
+	}
+};
 
-      bool isZero() const
-      {
-         return (is_zero(val.real()) && is_zero(val.imag()));
-      }
-   };
+namespace detail
+{
+template<class... Fields> struct VertexImpl;
+}
 
-   class InverseMetricVertex
-   {
-   private:
-      std::complex<double> val;
+template <class... Fields>
+struct Vertex
+{
+	using index_bounds = typename boost::mpl::fold<
+		boost::mpl::vector<Fields...>,
+		boost::mpl::pair<boost::mpl::vector<>, boost::mpl::vector<>>,
+		boost::mpl::pair<
+			boost::mpl::joint_view<
+				boost::mpl::first<boost::mpl::_1>,
+				boost::mpl::first<meta::index_bounds<boost::mpl::_2>>
+			>,
+			boost::mpl::joint_view<
+				boost::mpl::second<boost::mpl::_1>,
+				boost::mpl::second<meta::index_bounds<boost::mpl::_2>>
+			>
+		>
+	>::type;
+	using indices_type = std::array<int,
+		detail::total_number_of_field_indices<
+			boost::mpl::vector<Fields...>
+		>::value
+	>;
+	using vertex_type = typename
+		detail::VertexImpl<Fields...>::vertex_type;
 
-   public:
-      InverseMetricVertex(std::complex<double> v) : val(v) {}
+	template <int FieldIndex>
+	static typename field_indices<typename boost::mpl::at_c<
+		boost::mpl::vector<Fields...>, FieldIndex>::type
+	>::type field_indices(const indices_type& indices)
+	{
+		using namespace boost::mpl;
+		using fields = vector<Fields...>;
 
-      std::complex<double> value() const { return val; }
+		using result_type = typename field_indices<
+			typename boost::mpl::at_c<fields, FieldIndex>::type
+		>::type;
+		
+		using preceeding_fields = typename erase<fields,
+			typename advance<
+				typename begin<fields>::type,
+				int_<FieldIndex>
+			>::type,
+			typename end<fields>::type
+		>::type;
+		
+		constexpr int offset =
+			detail::total_number_of_field_indices<preceeding_fields>::value;
+		constexpr int length = std::tuple_size<result_type>::value;
 
-      bool isZero() const
-      {
-         return (is_zero(val.real()) && is_zero(val.imag()));
-      }
-   };
+		result_type result_indices;
+		std::copy(indices.begin() + offset,
+			indices.begin() + offset + length,
+			result_indices.begin()
+		);
+		
+		return result_indices;
+	}
 
-   /**
-    * @class VertexData<F...>
-    * @brief VertexData data for a vertex with the fields specified by F....
-    */
-   template <class... Fields>
-   struct VertexData;
+	static vertex_type
+	evaluate(const indices_type& indices, const context_base& context)
+	{
+		return detail::VertexImpl<Fields...>::evaluate( indices, context );
+	}
+};
 
-   struct context_base;
+struct context_base;
 
-   template <class... Fields>
-   class Vertex
-   {
-      using Data = VertexData<Fields...>;
+namespace detail
+{
+@CXXDiagrams_Vertices@
 
-   public:
-      using index_bounds = typename boost::mpl::fold<
-         boost::mpl::vector<Fields...>,
-         boost::mpl::pair<boost::mpl::vector<>, boost::mpl::vector<>>,
-         boost::mpl::pair<
-            boost::mpl::joint_view<
-               boost::mpl::first<boost::mpl::_1>,
-               boost::mpl::first<meta::index_bounds<boost::mpl::_2>>>,
-            boost::mpl::joint_view<
-               boost::mpl::second<boost::mpl::_1>,
-               boost::mpl::second<meta::index_bounds<boost::mpl::_2>>>>>::type;
-      using indices_type =
-         std::array<int, detail::total_number_of_field_indices<
-                            boost::mpl::vector<Fields...>>::value>;
-      using vertex_type = typename Data::vertex_type;
+@CXXDiagrams_UnitCharge@
+}
 
-      template <int FieldIndex>
-      static typename field_indices<typename boost::mpl::at_c<
-         boost::mpl::vector<Fields...>, FieldIndex>::type>::type
-      field_indices(const indices_type& indices)
-      {
-         using namespace boost::mpl;
-         using fields = vector<Fields...>;
-
-         using result_type = typename field_indices<
-            typename boost::mpl::at_c<fields, FieldIndex>::type>::type;
-
-         using preceeding_fields =
-            typename erase<fields,
-                           typename advance<typename begin<fields>::type,
-                                            int_<FieldIndex>>::type,
-                           typename end<fields>::type>::type;
-
-         constexpr int offset =
-            detail::total_number_of_field_indices<preceeding_fields>::value;
-         constexpr int length = std::tuple_size<result_type>::value;
-
-         result_type result_indices;
-         std::copy(indices.begin() + offset, indices.begin() + offset + length,
-                   result_indices.begin());
-         return result_indices;
-      }
-
-      static vertex_type evaluate(const indices_type& indices,
-                                  const context_base& context);
-   };
-
-   @CXXDiagrams_VertexData@
-
-   @CXXDiagrams_Vertices@
-
-   namespace detail
-   {
-      @CXXDiagrams_UnitCharge@
-   }
-
-   static double unit_charge(const context_base& context)
-   {
-      return -(detail::unit_charge(context).left().real() /
-               fields::Electron::electric_charge);
-   }
-
+static double unit_charge(const context_base& context)
+{
+	return -(detail::unit_charge(context).left().real() /
+		fields::Electron::electric_charge);
+}
 } // namespace @ModelName@_cxx_diagrams
 } // namespace flexiblesusy
 
