--- a/test/test_MSSM_npointfunctions.cpp.in
+++ b/test/test_MSSM_npointfunctions.cpp.in
@@ -142,9 +142,10 @@ namespace flexiblesusy
 {
 namespace MSSM_cxx_diagrams
 {
-@CXXDiagrams_VertexData@
-
+namespace detail
+{
 @CXXDiagrams_Vertices@
+}
 
 namespace npointfunctions
 {
