adapting FS model file after SARAH model file has been modified

--- a/model_files/LSplitMSSM/FlexibleSUSY.m.in
+++ b/model_files/LSplitMSSM/FlexibleSUSY.m.in
@@ -57,46 +57,48 @@ HighScaleInput = {
                 + UnitStep[LambdaLoopOrder-2] (
                   If[IsCloseRel[msq2[3,3],msu2[3,3],0.01],
                      lambda2LPhiMSqMSuDegenerate, lambda2LPhiFull])},
-    {gYu      , gYuTree + UnitStep[LambdaLoopOrder-1] gYu1L},
-    {gYd      , gYdTree + UnitStep[LambdaLoopOrder-1] gYd1L},
+    {g1u      , gYuTree + UnitStep[LambdaLoopOrder-1] gYu1L},
+    {g1d      , gYdTree + UnitStep[LambdaLoopOrder-1] gYd1L},
     {g2u      , g2uTree + UnitStep[LambdaLoopOrder-1] g2u1L},
     {g2d      , g2dTree + UnitStep[LambdaLoopOrder-1] g2d1L},
-    {gleh11, 0},
-    {gleh12, 0},
-    {gleh21, 0},
-    {gleh22, 0},
-    {geeee11, 0},
-    {geeee12, 0},
-    {geeee22, 0},
-    {geehh11, 0},
-    {geehh12, 0},
-    {geehh21, 0},
-    {geehh22, 0},
-    {glele12, 0},
-    {gllee11, 0},
-    {gllee12, 0},
-    {gllee21, 0},
-    {gllee22, 0},
-    {gllhha11, 0},
-    {gllhha12, 0},
-    {gllhha21, 0},
-    {gllhha22, 0},
-    {gllhhb1, 0},
-    {gllhhb2, 0},
-    {gllll11, 0},
-    {gllll12, 0},
-    {gllll21, 0},
-    {gllll22, 0},
-    {gdlse1, ZEROMATRIX[3,1]},
-    {gdlse2, ZEROMATRIX[3,1]},
-    {gdsle1, ZEROMATRIX[3,1]},
-    {gdsle2, ZEROMATRIX[3,1]},
-    {gsebe1, ZEROMATRIX[3,1]},
-    {gsebe2, ZEROMATRIX[3,1]},
-    {gslbl1, ZEROMATRIX[3,1]},
-    {gslbl2, ZEROMATRIX[3,1]},
-    {gslwl1, ZEROMATRIX[3,1]},
-    {gslwl2, ZEROMATRIX[3,1]}
+    {gllhhb11 , 0},
+    {gllhha11 , 0},
+    {gllhhb12 , 0},
+    {gllhha12 , 0},
+    {gllhhb21 , 0},
+    {gllhha21 , 0},
+    {gllhhb22 , 0},
+    {gllhha22 , 0},
+    {geehh11  , 0},
+    {geehh12  , 0},
+    {geehh21  , 0},
+    {geehh22  , 0},
+    {glleea11 , 0},
+    {glleea12 , 0},
+    {glllla11 , 0},
+    {gllllb   , 0},
+    {glllla12 , 0},
+    {glleea21 , 0},
+    {glleea22 , 0},
+    {glllla22 , 0},
+    {geeee11  , 0},
+    {geeee12  , 0},
+    {geeee22  , 0},
+    {glleeb   , 0},
+    {gdlse1   , ZEROMATRIX[3,1]},
+    {gdlse2   , ZEROMATRIX[3,1]},
+    {gdsle1   , ZEROMATRIX[3,1]},
+    {gdsle2   , ZEROMATRIX[3,1]},
+    {gslbl1   , ZEROMATRIX[3,1]},
+    {gslwl1   , ZEROMATRIX[3,1]},
+    {gslbl2   , ZEROMATRIX[3,1]},
+    {gslwl2   , ZEROMATRIX[3,1]},
+    {gsebe1   , ZEROMATRIX[3,1]},
+    {gsebe2   , ZEROMATRIX[3,1]},
+    {gleh11   , 0},
+    {gleh21   , 0},
+    {gleh12   , 0},
+    {gleh22   , 0}
 };
 
 (* The scale where we impose the EWSB conditions
