Implement the c++ side of the new vertices

--- a/templates/cxx_qft/vertices.hpp.in
+++ b/templates/cxx_qft/vertices.hpp.in
@@ -101,6 +101,150 @@ namespace @ModelName@_cxx_diagrams
       }
    };
 
+   /** \brief A class representing a numerically evaluated
+    * tree-level vertex that is proportional to a momentum.
+    * It consists of a complex number as well as an index
+    * corresponding to the index of the field to whose
+    * momentum the vertex is proportional.
+    **/
+   class MomentumVertex
+   {
+   private:
+      std::complex<double> val;
+      int index;
+   public:
+      /** \brief Contruct a MomentumVertex from a
+       * complex number representing and a field index.
+       **/ 
+      MomentumVertex(const std::complex<double>& v, int i)
+      : val(v), index(i)
+      {}
+
+      /** \brief Retrieve the numerical value of the vertex
+       * \param i The index of the field to whose momentum
+       * the vertex is proportional.
+       * \returns the coefficient of the even permutation
+       **/
+      std::complex<double> value( int i ) const
+      {
+			   if( i != index )
+			      throw std::invalid_argument(
+               "MomentumVertex: Wrong index specified");
+         
+				 return val;
+			}
+      
+      bool isZero() const
+      {
+         return (is_zero(val.real()) && is_zero(val.imag()));
+      }
+   };
+
+   /** \brief A class representing a numerically evaluated
+    * tree-level vertex with three vector bosons.
+    * It consists of one complex number as well as an \a ordering
+    * encoding whether the complex number is taken to be the
+    * coefficient of
+    * 
+    * \f{equation}{
+    * g[l1, l2] * (p[field1, l3] - p[field2, lIndex3]) +
+    * g[l2, l3] * (p[field2, l1] - p[field3, lIndex1]) +
+    * g[l1, l3] * (p[field3, l2] - p[field1, lIndex2])
+    * \f}
+    * 
+    * or its negative.
+    * The former corresponds to the \a even permutation and
+    * the latter to the \a odd permutation.
+    **/
+   class TripleVectorVertex
+   {
+   public:
+      struct even_permutation {};
+      struct odd_permutation {};
+   private:
+      std::complex<double> val;
+      bool even;
+   public:
+      /** \brief Contruct a TripleVectorVertex from a
+       * complex number representing the even coefficient.
+       **/ 
+      TripleVectorVertex(const std::complex<double>& v,
+			  even_permutation ) : val(v), even( true )
+      {}
+      
+      /** \brief Contruct a TripleVectorVertex from a
+       * complex number representing the odd coefficient.
+       **/ 
+      TripleVectorVertex(const std::complex<double>& v,
+			  odd_permutation ) : val(v), even( false )
+      {}
+
+      /** \brief Retrieve the coefficient of the even permutation
+       * \returns the coefficient of the even permutation
+       **/
+      std::complex<double> value( even_permutation ) const
+			{ return even ? val : - val; }
+
+      /** \brief Retrieve the coefficient of the odd permutation
+       * \returns the coefficient of the odd permutation
+       **/
+      std::complex<double> value( odd_permutation ) const
+			{ return even ? - val : val; }
+      
+      bool isZero() const
+      {
+         return (is_zero(val.real()) && is_zero(val.imag()));
+      }
+   };
+
+   /** \brief A class representing a numerically evaluated
+    * tree-level vertex with four vector bosons.
+    * It consists of three complex numbers corresponding to
+    * (in order) the basis expansion with respect to the basis:
+    * 
+    * \f{equation}{
+    * ( g[l1, l2] g[l3, l4], g[l1, l3] g[l2, l4], g[l1, l4] g[l2, l3] )
+    * \f}
+    **/
+   class QuadrupleVectorVertex
+   {
+   private:
+      std::complex<double> part1, part2, part3;
+
+   public:
+      /** \brief Contruct a QuadrupleVectorVertex from three
+       * complex numbers representing the coefficients in the
+       * basis expansion.
+       **/ 
+      QuadrupleVectorVertex(const std::complex<double>& p1,
+			   const std::complex<double>& p2,
+			   const std::complex<double>& p3 )
+      : part1(p1), part2(p2), part3(p3)
+      {}
+
+      /** \brief Retrieve the coefficient of \f$ g[l1, l2] g[l3, l4] \f$
+       * \returns the corresponding coefficient
+       **/
+      std::complex<double> value1() const { return part1; }
+      
+      /** \brief Retrieve the coefficient of \f$ g[l1, l3] g[l2, l4] \f$ 
+       * \returns the corresponding coefficient
+       **/
+      std::complex<double> value2() const { return part2; }
+      
+      /** \brief Retrieve the coefficient of \f$ g[l1, l4] g[l2, l3] \f$ 
+       * \returns the corresponding coefficient
+       **/
+      std::complex<double> value3() const { return part3; }
+
+      bool isZero() const
+      {
+         return (is_zero(part1.real()) && is_zero(part1.imag()) &&
+                 is_zero(part2.real()) && is_zero(part2.imag()) &&
+                 is_zero(part3.real()) && is_zero(part3.imag()));
+      }
+   };
+
    class MomentumDifferenceVertex
    {
    private:
