revert last commit
because the Delta_mu corrections are already incorporated in the muon
Yukawa coupling of the EFT and must not appear in the matching to the
MSSM.

--- a/model_files/LSplitMSSM/FlexibleSUSY.m.in
+++ b/model_files/LSplitMSSM/FlexibleSUSY.m.in
@@ -59,7 +59,7 @@ beta = ArcTan[TanBeta];
 cb = Cos[beta];
 sb = Sin[beta];
 c2b = Cos[2 beta];
-YeMSSM[2,2] = Ye[2,2]/(cb (1 + deltaMu));
+YeMSSM[2,2] = Ye[2,2]/cb;
 Te[1,1] = 0;
 Te[1,2] = 0;
 Te[2,1] = 0;
@@ -375,14 +375,4 @@ g2d1L = 1/(4 Pi)^2 g2 Cos[ArcTan[TanBeta]] (
      (* + (g2^2/6) Log[msl2[1,1]/SCALE^2] *)
      (* + (g2^2/6) Log[msl2[2,2]/SCALE^2] *)
      + (g2^2/6) Log[msl2[3,3]/SCALE^2]
-);
-
-(* arXiv:0808.1530, Eq. (8) *)
-deltaMu = -1/(4 Pi)^2 \[Mu] TanBeta (
-    + g2^2 MassWB (1 + 1/2) TCIabc[MassB, MassWB, Sqrt[msl2[2,2]]]
-    + 3/5 g1^2 MassB (
-        + TCIabc[\[Mu], MassB, Sqrt[mse2[2,2]]]
-        - 1/2 TCIabc[\[Mu], MassB, Sqrt[msl2[2,2]]]
-        - TCIabc[MassB, Sqrt[msl2[2,2]], Sqrt[mse2[2,2]]]
-    )
 );
