Add missing header

--- a/templates/cxx_qft/context_base.hpp.in
+++ b/templates/cxx_qft/context_base.hpp.in
@@ -28,6 +28,8 @@
 #ifndef @ModelName@_CXXQFT_CONTEXT_BASE_H
 #define @ModelName@_CXXQFT_CONTEXT_BASE_H
 
+#include "@ModelName@_mass_eigenstates.hpp"
+
 #include "@ModelName@_fields.hpp"
 
 namespace flexiblesusy
