--- a/.gitignore
+++ b/.gitignore
@@ -79,4 +79,5 @@ test/LesHouches.out.*
 test/test_*.callgrind.out*
 test/test_SM_npointfunctions.cpp
 test/test_MSSM_npointfunctions.cpp
+test/test_SM_cxxdiagrams.cpp
 
