adding 3- and 4-loop QCD corrections to Mh

--- a/model_files/LSplitMSSM/FlexibleSUSY.m.in
+++ b/model_files/LSplitMSSM/FlexibleSUSY.m.in
@@ -197,6 +197,8 @@ MediumPoleMassPrecision  = {};
 LowPoleMassPrecision     = {};
 
 UseHiggs2LoopSM = True;
+UseHiggs3LoopSM = True;
+UseHiggs4LoopSM = True;
 
 ExtraSLHAOutputBlocks = {
    {FlexibleSUSYLowEnergy,
